<resources>
    <string name="app_name">SkyCarta</string>
    <string name="Create">Создать</string>
    <string name="Login">Войти</string>
    <string name="Hello_txt">Добро пожаловать!</string>
    <string name="todo">TODO</string>
    <string name="register">Регистрация</string>
    <string name="main_name">Добро</string>
    <string name="main_name2">Пожаловать</string>
    <string name="have_acc">У вас еще нет аккаунта?</string>
    <string name="img">IMG</string>
    <string name="lobby_text">Куда полетим сегодня?</string>
    <string name="lobby_tf">введите аэропорт</string>
    <string name="txt1">Ваши рейсы</string>
    <string name="email">Почта</string>
    <string name="pass">Пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="fav_btn">Добавить в избранное</string>
    <string name="load_more">Загрузить больше</string>
    <string name="remove_favorite">Убрать из избранного</string>
    <string name="loading_info">Идет загрузка ожидайте</string>

    <string name="title_activity_lobby_screen2">Lobby_screen2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_settings">Настройки</string>

    <string name="user_name">Вехов Эдуард</string>
    <string name="admin_label">Добро подаловать Администратор</string>

    //main screen
    <string name="btn_main_search">Найти рейс</string>
    <string name="lobby_label">Куда полетим сегодня?</string>


    //admin
    <string name="admin_screen1">Модерировать обращения</string>
    <string name="admin_screen2">Отправить заявку Администратору</string>


    //user_profile
    <string name="user_profile_1">Настройки профиля</string>
    <string name="user_profile_2">Поддержка</string>
    <string name="user_profile_3">Выйти</string>

    //settings_screen
    <string name="change_pass_text">Сменить пароль</string>
    <string name="change_color_text">Сменить цвет профиля</string>
    <string name="delete_account_text">Удалить аккаунт</string>
</resources>