<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_label"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/admin_messages_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140sp"
        android:text="@string/admin_screen1" />

    <Button
        android:id="@+id/admin_invite_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/admin_screen2" />

    <!-- Добавьте здесь элементы управления для администратора -->

</LinearLayout>
