<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_blue">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="1sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="330dp"
                        android:contentDescription="@string/img"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/lobby_back" />

                    <Button
                        android:id="@+id/btn_search"
                        android:layout_width="220sp"
                        android:layout_gravity="bottom|center_horizontal"
                        android:background="@drawable/btn_main"
                        android:text="@string/btn_main_search"
                        android:textColor="@color/white"
                        android:layout_height="48sp"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/txt1"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/favoritesContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="16dp">

                        <TextView
                            android:id="@+id/textHome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="This is home Fragment"
                            android:layout_margin="16dp"
                            android:textSize="20sp"/>

                        <Button
                            android:id="@+id/btnSearch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="View Flights"
                            android:layout_margin="16dp"/>

                        <TextView
                            android:id="@+id/titleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Favorites"
                            android:textSize="20sp"
                            android:layout_margin="16dp"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="10dp"
                        android:text="Сейчас Популярно"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="190dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="125dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:orientation="vertical">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:id="@+id/imageView3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:scaleType="centerCrop"
                                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                                    app:srcCompat="@drawable/dagestan_img" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="125dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:orientation="vertical">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:id="@+id/imageView4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:scaleType="centerCrop"
                                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                                    app:srcCompat="@drawable/moscow_img" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="125dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:orientation="vertical">

                                <com.google.android.material.imageview.ShapeableImageView
                                    android:id="@+id/imageView5"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:scaleType="centerCrop"
                                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                                    app:srcCompat="@drawable/dagestan_img" />
                            </LinearLayout>
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
